Bug 833340 - Fix a couple of jittests failing with rooting analysis r=terrence